@@ -28,7 +28,7 @@ SET(LICENSE BSD)
 SET(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/Modules ${CMAKE_ROOT}/Modules )
 INCLUDE(ManageEnvironment RESULT_VARIABLE MANAGE_ENVIRONMENT_PATH)
 INCLUDE(ManageVersion)
-LOAD_RELEASE_FILE("RELEASE-NOTES.txt")
+RELEASE_NOTES_READ_FILE()
 INCLUDE(ManageUninstall)
 
 ####################################################################
