@@ -1,4 +1,4 @@
-# - Targets and macros that related to versioning.
+# - Modules for manipulate version and ChangeLogs
 #
 # Includes:
 #   ManageVariable
@@ -7,16 +7,17 @@
 # Included by:
 #   PackSource
 #
-# Defines following macros:
-#   LOAD_RELEASE_FILE(releaseFile)
+# Defines following functions:
+#   RELEASE_NOTES_READ_FILE([releaseFile])
 #   - Load release file information.
 #     Arguments:
-#     + releaseFile: release file to be read.
+#     + releaseFile: (Optional) release file to be read.
 #       This file should contain following definition:
 #       + PRJ_VER: Release version.
 #       + SUMMARY: Summary of the release. Will be output as CHANGE_SUMMARY.
 #          and a [Changes] section tag, below which listed the change in the
 #          release.
+#       Default:RELEASE-NOTES.txt
 #     This macro reads or define following variables:
 #     + RELEASE_TARGETS: Sequence of release targets.
 #     This macro outputs following files:
@@ -30,16 +31,35 @@
 #     + PRJ_DOC_DIR: Documentation for the project.
 #       Default: ${DOC_DIR}/${PROJECT_NAME}-${PRJ_VER}
 #
+#
 
 IF(NOT DEFINED _MANAGE_VERSION_CMAKE_)
     SET(_MANAGE_VERSION_CMAKE_ "DEFINED")
     INCLUDE(ManageMessage)
     INCLUDE(ManageVariable)
 
-    FUNCTION(LOAD_RELEASE_FILE releaseFile)
-	COMMAND_OUTPUT_TO_VARIABLE(_grep_line grep -F "[Changes]" -n -m 1 ${releaseFile})
+    SET(CHANGELOG_FILE "${CMAKE_BINARY_DIR}/ChangeLog" CACHE FILEPATH
+	"ChangeLog")
+    SET(CHANGELOG_PREV_FILE "${CMAKE_SOURCE_DIR}/ChangeLog.prev" FILEPATH
+	"ChangeLog.prev")
 
-	SET(RELEASE_FILE ${releaseFile} CACHE FILEPATH "Release File")
+    ADD_CUSTOM_TARGET(changelog_prev_update
+	COMMAND ${CMAKE_COMMAND} -E copy ${CHANGELOG_FILE} ${CHANGELOG_PREV_FILE}
+	DEPENDS ${CHANGELOG_FILE}
+	COMMENT "${CHANGELOG_FILE} are saving as ${CHANGELOG_PREV_FILE}"
+	)
+
+    FUNCTION(RELEASE_NOTES_READ_FILE)
+	FOREACH(_arg ${ARGN})
+	    IF(EXISTS ${_arg})
+		SET(RELEASE_FILE ${_arg} CACHE FILEPATH "Release File")
+	    ENDIF(EXISTS ${_arg})
+	ENDFOREACH(_arg ${ARGN})
+
+	IF(RELEASE_FILE STREQUAL "")
+	    SET(RELEASE_FILE "RELEASE-NOTES.txt" CACHE FILEPATH "Release File")
+	ENDIF(RELEASE_FILE STREQUAL "")
+
 	FILE(STRINGS ${RELEASE_FILE} _release_lines)
 
 	SET(_changeItemSection 0)
@@ -74,22 +94,26 @@ IF(NOT DEFINED _MANAGE_VERSION_CMAKE_)
 	    MESSAGE(FATAL_ERROR "${RELEASE_FILE} does not have ChangeLog items!")
 	ENDIF(_changeSection EQUAL 0)
 
-	SET(CHANGELOG_ITEMS "${_changeItems}")
+	SET(CHANGELOG_ITEMS "${_changeItems}" CACHE STRING "ChangeLog Item")
 
 	SET_COMPILE_ENV(PRJ_DOC_DIR "${DOC_DIR}/${PROJECT_NAME}-${PRJ_VER}"
 	    CACHE PATH "Project docdir prefix" FORCE)
 
+	CHANGELOG_WRITE_FILE()
+    ENDFUNCTION(RELEASE_NOTES_READ_FILE)
+
+    FUNCTION(CHANGELOG_WRITE_FILE)
 	INCLUDE(DateTimeFormat)
 
-        FILE(WRITE "${CMAKE_BINARY_DIR}/ChangeLog" "* ${TODAY_CHANGELOG} ${MAINTAINER} - ${PRJ_VER}")
-        FILE(APPEND "${CMAKE_BINARY_DIR}/ChangeLog" "${CHANGELOG_ITEMS}\n\n")
-	FILE(READ "ChangeLog.prev" CHANGELOG_PREV)
-	FILE(APPEND "${CMAKE_BINARY_DIR}/ChangeLog" "${CHANGELOG_PREV}")
+	FILE(WRITE ${CHANGELOG_FILE} "* ${TODAY_CHANGELOG} ${MAINTAINER} - ${PRJ_VER}")
+	FILE(APPEND ${CHANGELOG_FILE} "${CHANGELOG_ITEMS}\n\n")
+	FILE(READ ${CHANGELOG_PREV_FILE} CHANGELOG_PREV)
+	FILE(APPEND ${CHANGELOG_FILE} "${CHANGELOG_PREV}")
 
 	ADD_CUSTOM_COMMAND(OUTPUT ${CMAKE_BINARY_DIR}/ChangeLog
 	    COMMAND ${CMAKE_COMMAND} -E remove -f ${CMAKE_CACHE_TXT}
 	    COMMAND ${CMAKE_COMMAND} ${CMAKE_SOURCE_DIR}
-	    DEPENDS ${RELEASE_FILE} ChangeLog.prev
+	    DEPENDS ${RELEASE_FILE} ${CHANGELOG_PREV_FILE}
 	    COMMENT "ChangeLog is older than ${RELEASE_FILE}. Rebuilding"
 	    VERBATIM
 	    )
@@ -102,7 +126,9 @@ IF(NOT DEFINED _MANAGE_VERSION_CMAKE_)
 	    VERBATIM
 	    )
 
-    ENDFUNCTION(LOAD_RELEASE_FILE releaseFile)
+    ENDFUNCTION(CHANGELOG_WRITE_FILE)
+
+
 
 ENDIF(NOT DEFINED _MANAGE_VERSION_CMAKE_)
 
