@@ -1,13 +1,20 @@
 PRJ_VER=0.8.99
-SUMMARY=Release version are now defined in cmake-fedora.conf; New command: koji-build-scratch
+SUMMARY=Major revised cmake-fedora
 BODHI_UPDATE_TYPE=bugfix
 REDHAT_BUGZILLA=
 [Changes]
+- Release version are now defined in cmake-fedora.conf
+  for easy maintenance.
+- CVS support is removed.
 - New command: koji-build-scratch for scratch build on all supported
   releases.
+- New module: ManageTarget
 - New function: SETTING_STRING_GET_VARIABLE
-- Release versions are now defined in configuration file for easy
-  maintenance.
+- New macro: ADD_CUSTOM_TARGET_COMMAND
+- Target changed: changelog_update are now separate as:
+  + changelog_prev_update: Update ChangeLog.prev
+  + rpm_changelog_prev_update: Update RPM-ChangeLog.prev
+- Function renamed: LOAD_RELEASE_FILE to RELEASE_NOTES_READ_FILE
 - RELEASE_ON_FEDORA: support new tags: "fedora" for current fedora,
   and "epel" for current epel.
 - ChangeLog generation rewritten, target version_check no longer need.
